--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="Context\JobPortalDbContext.cs" />
     <Compile Include="Entities\Applicant.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\ISoftDeleteEntity.cs" />
     <Compile Include="Entities\Question.cs" />
     <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\JobApplication.cs" />
