--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,13 +49,14 @@
   <ItemGroup>
     <Compile Include="Context\JobPortalDbContext.cs" />
     <Compile Include="Entities\Applicant.cs" />
+    <Compile Include="Entities\IIdentityEntity.cs" />
+    <Compile Include="Enums\JobApplicationStatus.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\ISoftDeleteEntity.cs" />
     <Compile Include="Entities\Question.cs" />
-    <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\JobApplication.cs" />
     <Compile Include="Entities\QuestionAnswer.cs" />
-    <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\Employer.cs" />
     <Compile Include="Entities\JobOffer.cs" />
     <Compile Include="Entities\SkillTag.cs" />
