--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CE6BCE85-FBF9-4197-BF61-734E280070DA}</ProjectGuid>
+    <ProjectGuid>{C94B72C4-AD9F-4C5E-8AC9-3A401065424F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
+    <RootNamespace>Infrastructure</RootNamespace>
+    <AssemblyName>Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,14 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,28 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\JobPortalDbContext.cs" />
-    <Compile Include="Entities\Applicant.cs" />
-    <Compile Include="Enums\JobApplicationStatus.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Entities\Question.cs" />
-    <Compile Include="Entities\JobApplication.cs" />
-    <Compile Include="Entities\QuestionAnswer.cs" />
-    <Compile Include="Entities\Employer.cs" />
-    <Compile Include="Entities\JobOffer.cs" />
-    <Compile Include="Entities\SkillTag.cs" />
-    <Compile Include="Initializer\JobPortalInitializer.cs" />
+    <Compile Include="Entity\IEntity.cs" />
+    <Compile Include="Entity\IIdentityEntity.cs" />
+    <Compile Include="Entity\ISoftDeleteEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{c94b72c4-ad9f-4c5e-8ac9-3a401065424f}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWorkProvider.cs" />
+    <Compile Include="UnitOfWork\UnitOfWorkProviderBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
