--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -43,11 +43,20 @@
     <Compile Include="Entity\IEntity.cs" />
     <Compile Include="Entity\IIdentityEntity.cs" />
     <Compile Include="Entity\ISoftDeleteEntity.cs" />
+    <Compile Include="Query\IQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Predicates\CompositePredicate.cs" />
+    <Compile Include="Query\Predicates\IPredicate.cs" />
+    <Compile Include="Query\Predicates\Operators\LogicalOperator.cs" />
+    <Compile Include="Query\Predicates\Operators\ValueComparingOperator.cs" />
+    <Compile Include="Query\Predicates\SimplePredicate.cs" />
+    <Compile Include="Query\QueryBase.cs" />
+    <Compile Include="Query\QueryResult.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWorkProvider.cs" />
     <Compile Include="UnitOfWork\UnitOfWorkProviderBase.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
