--- a/Infrastructure.EntityFramework/Infrastructure.EntityFramework.csproj
+++ b/Infrastructure.EntityFramework/Infrastructure.EntityFramework.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\EntityFrameworkQuery.cs" />
+    <Compile Include="Query\Predicates\SimplePredicateExtension.cs" />
     <Compile Include="Repository\EntityFrameworkRepository.cs" />
     <Compile Include="UnitOfWork\EntityFrameworkUnitOfWork.cs" />
     <Compile Include="UnitOfWork\EntityFrameworkUnitOfWorkProvider.cs" />
