--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\BusinessLayerInstaller.cs" />
     <Compile Include="Configuration\MappingConfiguration.cs" />
     <Compile Include="DataTransferObjects\ApplicantDto.cs" />
     <Compile Include="DataTransferObjects\Common\DtoBase.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="DataTransferObjects\Filters\SkillTagFilterDto.cs" />
     <Compile Include="DataTransferObjects\Filters\UserFilterDto.cs" />
     <Compile Include="DataTransferObjects\JobApplicationDto.cs" />
+    <Compile Include="DataTransferObjects\JobOfferCreateDto.cs" />
     <Compile Include="DataTransferObjects\JobOfferDto.cs" />
     <Compile Include="DataTransferObjects\QuestionDto.cs" />
     <Compile Include="DataTransferObjects\QuestionAnswerDto.cs" />
@@ -75,7 +77,7 @@
     <Compile Include="DataTransferObjects\UserDto.cs" />
     <Compile Include="Facades\Common\FacadeBase.cs" />
     <Compile Include="Facades\EmployerFacade.cs" />
-    <Compile Include="Facades\EmployerJobManagementFacate.cs" />
+    <Compile Include="Facades\JobOfferFacade.cs" />
     <Compile Include="Facades\JobApplicationFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryObjects\JobApplicationQueryObject.cs" />
