Job application facade

--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -89,11 +89,13 @@
     <Compile Include="QueryObjects\QuestionQueryObject.cs" />
     <Compile Include="QueryObjects\SkillQueryObject.cs" />
     <Compile Include="QueryObjects\UserQueryObject.cs" />
+    <Compile Include="Services\ApplicationProcessing\ApplicationProcesingService.cs" />
+    <Compile Include="Services\ApplicationProcessing\IApplicationProcessingService.cs" />
     <Compile Include="Services\Common\CrudQueryServiceBase.cs" />
     <Compile Include="Services\Common\ICrudService.cs" />
     <Compile Include="Services\Common\ServiceBase.cs" />
-    <Compile Include="Services\Employers\IJobApplicationService.cs" />
-    <Compile Include="Services\Employers\JobApplicationService.cs" />
+    <Compile Include="Services\Employers\IEmpoyerService.cs" />
+    <Compile Include="Services\Employers\EmployerService.cs" />
     <Compile Include="Services\JobApplications\IJobApplicationService.cs" />
     <Compile Include="Services\JobApplications\JobApplicationService.cs" />
     <Compile Include="Services\JobOffers\IJobOfferService.cs" />
