--- a/BusinessLayer.Tests/BusinessLayer.Tests.csproj
+++ b/BusinessLayer.Tests/BusinessLayer.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="FacadeTests\Common\FacadeMockManager.cs" />
     <Compile Include="FacadeTests\Common\StubUow.cs" />
     <Compile Include="FacadeTests\EmployerFacadeTests.cs" />
+    <Compile Include="FacadeTests\SkillFacadeTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
