--- a/PresentationLayer/PresentationLayer.csproj
+++ b/PresentationLayer/PresentationLayer.csproj
@@ -233,9 +233,11 @@
     <Content Include="Views\JobApplication\Index.cshtml" />
     <Content Include="Views\JobApplication\Details.cshtml" />
     <Content Include="Views\JobApplication\Delete.cshtml" />
+    <Content Include="Views\JobApplication\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Validation\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
