--- a/PresentationLayer/Web.config
+++ b/PresentationLayer/Web.config
@@ -14,12 +14,20 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+<!--  <system.web>-->
+<!--    <compilation debug="true" targetFramework="4.6.1" />-->
+<!--    <httpRuntime targetFramework="4.6.1" />-->
+<!--    <httpModules>-->
+<!--      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />-->
+<!--    </httpModules>-->
+<!--  </system.web>-->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
-    <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-    </httpModules>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login"/>
+    </authentication>
+    <compilation debug="true" targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.6.1"/>
+    <httpModules/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
