Fix edit user/employer

--- a/PresentationLayer/PresentationLayer.csproj
+++ b/PresentationLayer/PresentationLayer.csproj
@@ -207,8 +207,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\SkillTag\Index.cshtml" />
     <Content Include="Views\SkillTag\Create.cshtml" />
@@ -230,6 +228,7 @@
     <Content Include="Views\Account\RegisterUser.cshtml" />
     <Content Include="Views\Account\RegisterEmployer.cshtml" />
     <Content Include="Views\JobOffer\Recommended.cshtml" />
+    <Content Include="Views\Employer\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
